[package]
name = "i2c-linux-sys"
version = "0.2.1"
authors = ["arcnmx"]
edition = "2018"

description = "Linux i2c-dev ioctls"
keywords = ["i2c", "i2c-dev", "i2cdev", "smbus"]

documentation = "https://docs.rs/i2c-linux-sys/latest/i2c_linux_sys"
repository = "https://github.com/arcnmx/i2c-linux-sys-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**.rs",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"
bitflags = "1"
byteorder = "1"
